// import React from 'react';
// import renderer from 'react-test-renderer';
// import Card from './Card';

// describe('Card', () => {
//   it('renders correctly', () => {
//     const tree = renderer
//       .create(<Card />)
//       .toJSON();
//     expect(tree).toMatchSnapshot();
//   });
  
//   it('renders name and img correctly', () => {
//     const name = 'name'
//     const img = require('../assets/images/logo.png')

//     const tree = renderer
//       .create(<Card name={name} img={img} />)
//       .toJSON();
//     expect(tree).toMatchSnapshot();
//   });
// });