// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "borderRadius": 5,
      "elevation": 5,
      "flex": 1,
      "justifyContent": "center",
      "margin": 8,
      "paddingHorizontal": 20,
      "paddingTop": 20,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 2,
    }
  }
>
  <Image
    style={
      Object {
        "borderRadius": 2,
        "flex": 1,
        "height": undefined,
        "resizeMode": "cover",
        "width": "100%",
      }
    }
  />
  <Text
    style={
      Object {
        "color": "#4a4a4a",
        "fontSize": 25,
        "padding": 20,
      }
    }
  />
</View>
`;

exports[`Card renders name and img correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "borderRadius": 5,
      "elevation": 5,
      "flex": 1,
      "justifyContent": "center",
      "margin": 8,
      "paddingHorizontal": 20,
      "paddingTop": 20,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 2,
    }
  }
>
  <Image
    source={1}
    style={
      Object {
        "borderRadius": 2,
        "flex": 1,
        "height": undefined,
        "resizeMode": "cover",
        "width": "100%",
      }
    }
  />
  <Text
    style={
      Object {
        "color": "#4a4a4a",
        "fontSize": 25,
        "padding": 20,
      }
    }
  >
    name
  </Text>
</View>
`;
